# modalbeliefrevision

./: 2  ;  Cargo.toml  \  create_images  debug.dot  examples.csv  examples.md  mu.dot  phi.dot  revision.dot  test.dot  to_latex.sh  todo.md
dot/: base.dot  create_images  debug.dot  dot.dot  dot1.dot  dot2.dot  input.dot  rearrange.py  revision.dot  revision_output.dot  test.dot
images/: plot.py
src/: distance.rs  distancesgeneral.rs  graphics.rs  main.rs  modal.rs  operation.rs  revision  revision.rs  semantic.rs  tests.rs  update.rs  utils.rs
