[package]
name = "s5rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
distance = "0.4.0"
pyo3 = {version = "0.19.2", optional = true}
cascade = "1.0.1"
enum-iterator = "1.5.0"
image = "0.24.6"
